unpackaged/main/default/objects/Planned_Gift__c/Planned_Gift__c.object-meta.xml
<CustomObject>
    <description>This custom object will be used to hold several types of planned gift details that EDF is a beneficiary.  The types include: Charitable Remainder Trusts, Donor Advised Funds (those that EDF writes), Gift Annuities, Legacy Plans, Other Planned Gifts, and Pooled Income Fund gifts.  Record types will be used to customize the fields to be captured for each type of planned gift.</description>
    <label>Planned Gift</label>
    <nameField>
        <label>Planned Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Gifts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>