unpackaged/main/default/objects/Planned_Gift__c/fields/Annual_Payout__c.field-meta.xml
<CustomField>
    <fullName>Annual_Payout__c</fullName>
    <label>Annual Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>