unpackaged/main/default/objects/Planned_Gift__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <inlineHelpText>Details on the how the gift was funded: cash or stock or any relevant details such as check number or stock name</inlineHelpText>
    <label>Asset Type</label>
    <type>TextArea</type>
</CustomField>