unpackaged/main/default/objects/Planned_Gift__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Campaign that generated the planned gift</inlineHelpText>
    <label>Campaign Code</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Planned Gifts</relationshipLabel>
    <relationshipName>Planned_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>