unpackaged/main/default/objects/Planned_Gift__c/fields/Date_Legacy_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Legacy_Closed__c</fullName>
    <inlineHelpText>Funds from the gift are received at EDF, administration completed</inlineHelpText>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>