unpackaged/main/default/objects/Planned_Gift__c/fields/Date_Legacy_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Legacy_Confirmed__c</fullName>
    <inlineHelpText>CGA or Trust funding received, or date of legacy pledge confirmation</inlineHelpText>
    <label>Date Confirmed</label>
    <type>Date</type>
</CustomField>