unpackaged/main/default/objects/Planned_Gift__c/fields/Date_Legacy_Info_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Legacy_Info_Requested__c</fullName>
    <inlineHelpText>Date prospective donor reaches out to EDF about this gift</inlineHelpText>
    <label>Date Info Requested</label>
    <type>Date</type>
</CustomField>