unpackaged/main/default/objects/Planned_Gift__c/fields/Date_Legacy_Matured__c.field-meta.xml
<CustomField>
    <fullName>Date_Legacy_Matured__c</fullName>
    <inlineHelpText>Date matured=Date of death</inlineHelpText>
    <label>Date Matured</label>
    <type>Date</type>
</CustomField>