unpackaged/main/default/objects/Planned_Gift__c/fields/Date_Legacy_Proposal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Legacy_Proposal_Sent__c</fullName>
    <inlineHelpText>Proposal documents provided to prospective donor</inlineHelpText>
    <label>Date Proposal Sent</label>
    <type>Date</type>
</CustomField>