unpackaged/main/default/objects/Planned_Gift__c/fields/DEL_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>DEL_Record_Type_Name__c</fullName>
    <description>Deprecate &amp; Delete - Do not deploy</description>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deprecate &amp; Delete - Do not deploy</inlineHelpText>
    <label>DEL_Record Type Name</label>
    <type>Text</type>
</CustomField>