unpackaged/main/default/objects/Planned_Gift__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person funding the Planned Gift</inlineHelpText>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Planned Gifts</relationshipLabel>
    <relationshipName>Planned_Gifts</relationshipName>
    <type>Lookup</type>
</CustomField>