unpackaged/main/default/objects/Planned_Gift__c/fields/EDF_is_a_Trustee__c.field-meta.xml
<CustomField>
    <fullName>EDF_is_a_Trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDF is a Trustee</label>
    <type>Checkbox</type>
</CustomField>