unpackaged/main/default/objects/Planned_Gift__c/fields/Gift_Annuity_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Annuity_Date__c</fullName>
    <label>Gift Annuity Date</label>
    <type>Date</type>
</CustomField>