unpackaged/main/default/objects/Planned_Gift__c/fields/LCRM_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>LCRM_Last_Modified_By__c</fullName>
    <inlineHelpText>Last User to update this record in LCRM</inlineHelpText>
    <label>LCRM Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>