unpackaged/main/default/objects/Planned_Gift__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Important information about the Planned Gift that is not captured in another field.</inlineHelpText>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>