unpackaged/main/default/objects/Planned_Gift__c/fields/Payment_Amount_or_Formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_or_Formula__c</fullName>
    <inlineHelpText>The payment amount of the Trust is an Annuity, or the payment rate of the trust is a Unitrust</inlineHelpText>
    <label>Payment Amount or Rate</label>
    <length>225</length>
    <type>Text</type>
</CustomField>