unpackaged/main/default/objects/Planned_Gift__c/fields/PG_Probability__c.field-meta.xml
<CustomField>
    <fullName>PG_Probability__c</fullName>
    <label>PG Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>