unpackaged/main/default/objects/Planned_Gift__c/fields/Planned_Gift_Officer__c.field-meta.xml
<CustomField>
    <fullName>Planned_Gift_Officer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Planned Giving Portfolio Manager that is responsible for closing this Planned Gift.</inlineHelpText>
    <label>Planned Gift Officer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.EDF_Staff__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Constituency_Text__c</field>
            <operation>equals</operation>
            <value>EDF Alumni</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Planned Gifts (Planned Gift Officer)</relationshipLabel>
    <relationshipName>Planned_Gifts4</relationshipName>
    <type>Lookup</type>
</CustomField>