unpackaged/main/default/objects/Planned_Gift__c/fields/Present_Value__c.field-meta.xml
<CustomField>
    <fullName>Present_Value__c</fullName>
    <label>Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>