unpackaged/main/default/objects/Planned_Gift__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INFO - requested more information</fullName>
            </value>
            <value>
                <fullName>PROP - proposed, gift not received</fullName>
            </value>
            <value>
                <fullName>PLDG - Pledged not legally binding</fullName>
            </value>
            <value>
                <fullName>IREV - Irrevocable, legally binding</fullName>
            </value>
            <value>
                <fullName>MATR - Donor deceased, waiting for distribution</fullName>
            </value>
            <value>
                <fullName>CLSD - Donor deceased, money received</fullName>
            </value>
            <value>
                <fullName>RNCE - Gift in, donor renounced income</fullName>
            </value>
            <value>
                <fullName>RVK - Donor revoked legacy plan pledge</fullName>
            </value>
            <value>
                <fullName>CDNO - Contingency did not occur</fullName>
            </value>
            <value>
                <fullName>IRA - IRA Rollover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>