unpackaged/main/default/objects/Planned_Gift__c/fields/Trust_Date__c.field-meta.xml
<CustomField>
    <fullName>Trust_Date__c</fullName>
    <label>Trust Date</label>
    <type>Date</type>
</CustomField>