unpackaged/main/default/objects/Planned_Gift__c/fields/Trust_Period__c.field-meta.xml
<CustomField>
    <fullName>Trust_Period__c</fullName>
    <label>Trust Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lifetime</fullName>
            </value>
            <value>
                <fullName>Term of years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>