unpackaged/main/default/objects/Planned_Gift__c/fields/Trust_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Sub_Type__c</fullName>
    <label>Trust Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annuity Trust</fullName>
            </value>
            <value>
                <fullName>Unitrust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>