unpackaged/main/default/objects/Planned_Gift__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bargain Sale</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Interest Free Loan</fullName>
            </value>
            <value>
                <fullName>Partial Interests</fullName>
            </value>
            <value>
                <fullName>Real property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>