unpackaged/main/default/objects/Planned_Gift__c/recordTypes/Charitable_Remainder_Trust.recordType-meta.xml
<RecordType>
    <fullName>Charitable_Remainder_Trust</fullName>
    <active>true</active>
    <description>Use for Charitable Remainder Trusts planned gifts</description>
    <label>Charitable Remainder Trust</label>
</RecordType>