unpackaged/main/default/objects/Planned_Gift__c/recordTypes/Donor_Advised_Funds.recordType-meta.xml
<RecordType>
    <fullName>Donor_Advised_Funds</fullName>
    <active>true</active>
    <description>Use for Donor Advised Funds planned gifts</description>
    <label>Donor Advised Funds</label>
</RecordType>