unpackaged/main/default/objects/Planned_Gift__c/recordTypes/IRA_Rollover.recordType-meta.xml
<RecordType>
    <fullName>IRA_Rollover</fullName>
    <active>true</active>
    <description>Use for IRA Rollover planned gifts</description>
    <label>IRA Rollover</label>
</RecordType>