unpackaged/main/default/objects/Planned_Gift__c/recordTypes/Legacy_Plan.recordType-meta.xml
<RecordType>
    <fullName>Legacy_Plan</fullName>
    <active>true</active>
    <description>Use for Legacy Plan planned gifts</description>
    <label>Legacy Plan</label>
</RecordType>