unpackaged/main/default/objects/Planned_Gift__c/listViews/IRA_Rollover.listView-meta.xml
<ListView>
    <fullName>IRA_Rollover</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Planned_Gift__c.IRA_Rollover</value>
    </filters>
    <label>IRA Rollover</label>
</ListView>